add report
